Fix word-wrapping on FF and Edge

--- a/alv-portal-ui/src/app/job-advertisement/job-ad-search/job-detail/job-detail.component.scss
+++ b/alv-portal-ui/src/app/job-advertisement/job-ad-search/job-detail/job-detail.component.scss
@@ -1,5 +1,5 @@
 
 .contact-panel {
-  word-break: break-word;
+  word-wrap: break-word;
   line-height: 1.75em;
 }
